# InheritX-Backend

./: .gitignore  Cargo.toml  api-test.http  db.sh  docker-compose.yml
src/: db.rs  lib.rs  main.rs
src/controller/: activity_controller.rs  activity_log_controller.rs  approval.controller.rs  claim_controller.rs  faq_controller.rs  kyc_controller.rs  mod.rs  notification_controller.rs  plan.controller.rs  user_support_controller.rs  withdrawal_history_controller.rs
src/middlewares/: auth.middleware.rs
src/models/: activity_models.rs  approval.models.rs  claim.rs  faq.rs  kyc_models.rs  mod.rs  notification.rs  plan_models.rs  user_models.rs  withdrawal_history_models.rs
src/repositories/: activity_repository.rs  claim_repository.rs  kyc_repository.rs  mod.rs  notification_repository.rs  withdrawal_history_repository.rs
src/routes/: activity_log_routes.rs  activity_routes.rs  approval.routes.rs  faq.routes.rs  faq_routes.rs  kyc_routes.rs  mod.rs  plan_routes.rs  user_support.routes.rs  withdrawal_history_routes.rs
src/tests/: kyc_tests.rs  mod.rs
tests/: plan_tests.rs
