[package]
name = "your_project_name"
version = "0.1.0"
edition = "2018"
[dependencies]
actix-web = "4.0"
jsonwebtoken = "8.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "postgres"] }
uuid = "1.0"


[dependencies.syn]
version = "1.0.109"
features = ["derive", "parsing", "printing"]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
postgres-types = { version = "0.2", features = ["derive"] }
